--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     font-family: "Poppins", sans-serif;
 }
 body{
-    background: #dfe9f5;
+    background: #f7f7f7;
 }
 .container{
     display: flex;
