--- a/css/sortie.css
+++ b/css/sortie.css
@@ -426,3 +426,15 @@ input {
     background-color: #ae400b;
     color: white;
 }
+
+.cherch{
+
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    width: 22%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
